--- a/project 1/style.css
+++ b/project 1/style.css
@@ -29,7 +29,7 @@ body {
   flex: 0.5;
   margin: 10px;
   position: relative;
-  transition: flex 0.7s ease-in;
+  transition: flex 0.5s;
 }
 
 .panel h3 {
@@ -46,6 +46,7 @@ body {
 }
 .panel.active h3 {
   opacity: 1;
+  transition: opacity 0.4s ease-in 0.2s;
 }
 
 
